--- a/_posts/2023-10-26-solar-project.html
+++ b/_posts/2023-10-26-solar-project.html
@@ -24,119 +24,127 @@ author: Vernon
             <p></p>
             <div class="media">
                 <div class="container">
-                    <div class="media-body">
-                        <div class="row">
-                            <div class="container">
-                                <h4 class="mt-0">{{ page.title }}</h4>
-                                <p>AEHCA Inc. has the ability to effect the conditions in which many
-                                    of the poverty stricken families have to live in. The most in
-                                    need are from the Indigenous population of Guatemala. 54% of the
-                                    population is considered Indigenous.
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <h4 class="font-weight-bolder"> {{ page.title }}</h4>
+                            <p></p>
+                            <div class="media-body">
+                                <p>How many of your neighbors lack any electricity in their house? Well it's all too
+                                    common in rural Guatemala to have no lighting except candles or burning waxed
+                                    sticks, and Ipala is no exception. We estimate that there were about 300 houses
+                                    lacking electricity a year ago, but now that number is down to about 250! How? Well
+                                    last year our friends at Cedar Ridge Community Church funded a pilot program with
+                                    ACIDHER (the NGO that does most of the Ipala onsite work for them as well as AEHCA)
+                                    to put in a solar collection system that could robustly power 3 light bulbs and
+                                    charge a couple cell phones. No, not a modern american house, but a huge improvement
+                                    for the families who had literally been in the dark!
                                 </p>
-                                <p>According to the UNICEF data, four out of 10 children under the
-                                    age of 5 suffer from poor nutrition. This issue is even worse for
-                                    the indigenous population since eight out of 10 children, or
-                                    double more than the average, suffer from the same problem.
-                                    Health-wise problems at an early age can affect growth, both
-                                    cognitively and physically. From 2010 to 2015, mortality in
-                                    children under 5 was 35 deaths a year per 1,000 live births.</p>
-                                <p>There are currently over 500,000 orphans in Guatemala and one
-                                    child is abandoned every 4 days. Vulnerable families are
-                                    especially in need of our support. Lacking support, safe work, or
-                                    daycare services, many families in Guatemala struggle to provide
-                                    adequate care for their children. </p>
-                                <h4 class="mt-0">How does our Organization support with health needs?</h4>
-                                <p>An important part of our health work is centered around improving
-                                    aspects of community health. Poor health may be a factor limiting
-                                    the abilities of families to access education, earn income and
-                                    participate in their communities. Our Community Health Program is
-                                    built on two elements: Nutrition and Shelter. The two most basic
-                                    needs. </p>
-                                <p>We provide food during the Covid-19 pandemic.</p>
-                                <p>We provide families with housing and efficient smokeless cookstoves
-                                    in an effort to reduce the prevalence of preventable disease. </p>
-                                <p>We provide support to a Seniors Center that provides health and
-                                    nutritional support to the elderly, at the same time connecting
-                                    them with younger members of the community. </p>
-                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
-                                <div class="col">
-                                    <div id="healthCarousel" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#healthCarousel" data-slide-to="0" class="active"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="1"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="2"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="3"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="4"></li>
-                                        </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="/images/health-house-no-stove.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Home without Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-no-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stoveless - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-chimney-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Chimney - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Chimney for the smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-delivery-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Delivery - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Delivering the new smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Moving the new smokeless stove base
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a class="carousel-control-prev" href="#healthCarousel" role="button"
-                                            data-slide="prev">
-                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Previous</span>
-                                        </a>
-                                        <a class="carousel-control-next" href="#healthCarousel" role="button"
-                                            data-slide="next">
-                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Next</span>
-                                        </a>
-                                    </div>
-                                </div>
                             </div>
                         </div>
-                        <hr class="my-4">
-                        <p class="font-weight-bold">Read another post from our team below.</p>
-                        <div class="list-group">
-                            {% for post in site.posts %}
-                            {% if page.title == post.title %}
-                            <a class="list-group-item list-group-item-action active" href="{{ post.url }}">{{ post.title
-                                }}</a>
-                            {% else %}
-                            <a class="list-group-item list-group-item-action" href="{{ post.url }}">{{ post.title }}</a>
-                            {% endif %}
-                            {% endfor %}
+                        <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                        <div class="col">
+                            <div id="solarCarousel" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#solarCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#solarCarousel" data-slide-to="1"></li>
+                                    <li data-target="#solarCarousel" data-slide-to="2"></li>
+                                    <li data-target="#solarCarousel" data-slide-to="3"></li>
+                                    <li data-target="#solarCarousel" data-slide-to="4"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="/images/solar_1.png" class="d-block w-100 rounded" alt="solar panel">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/solar_project.jpeg" class="d-block w-100 rounded"
+                                            alt="working on installing solar panels">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/solar_4.jpeg" class="d-block w-100 rounded"
+                                            alt="a home lit at night">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/solar_2.jpeg" class="d-block w-100 rounded"
+                                            alt="looking at solar panel stats">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/solar_3.jpeg" class="d-block w-100 rounded"
+                                            alt="a house light using electricity from solar">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#solarCarousel" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#solarCarousel" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <hr class="my-4">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                        <div class="col">
+                            <div id="educationCarousel" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#educationCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#educationCarousel" data-slide-to="1"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="/images/solar_5.jpeg" class="d-block w-100 rounded"
+                                            alt="Education - PAIN school - Ipala, Guatemala">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="/images/solar_6.png" class="d-block w-100 rounded"
+                                            alt="Education - Suyata school - Ipala, Guatemala">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#educationCarousel" role="button"
+                                    data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#educationCarousel" role="button"
+                                    data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+                        </div>
+                        <div class="col-sm-7">
+                            <p>When we asked Josseline Perez how the solar lighting system changed life for her family
+                                at first she looked at us like we were crazy, like OF COURSE LIFE IS A LOT BETTER NOW,
+                                but then went on to softly tell us: “<i>My daughter now has light to do her homework and
+                                    I don’t worry about tripping in the house. Oh if I need to come outside after dark I
+                                    can see if there is anything dangerous on the porch.</i>” We asked, dangerous? Like
+                                what? “<i>A snake or scorpion,</i>” she said.
+                            </p>
+                        </div>
+
+                    </div>
+                    <hr class="my-4">
+                    <p class="font-weight-bold">Read another post from our team below.</p>
+                    <div class="list-group">
+                        {% for post in site.posts %}
+                        {% if page.title == post.title %}
+                        <a class="list-group-item list-group-item-action active" href="{{ post.url }}">{{ post.title
+                                }}</a>
+                        {% else %}
+                        <a class="list-group-item list-group-item-action" href="{{ post.url }}">{{ post.title }}</a>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
