--- a/_posts/2023-10-24-classroom-size-improvement-project.html
+++ b/_posts/2023-10-24-classroom-size-improvement-project.html
@@ -28,101 +28,32 @@ author: Vernon
                         <div class="row">
                             <div class="container">
                                 <h4 class="mt-0">{{ page.title }}</h4>
-                                <p>AEHCA Inc. has the ability to effect the conditions in which many
-                                    of the poverty stricken families have to live in. The most in
-                                    need are from the Indigenous population of Guatemala. 54% of the
-                                    population is considered Indigenous.
+                                <p>One of the first projects we embarked on to help build a more robust education system
+                                    in Ipala broke ground September 25! 🎊 After two years of planning and raising
+                                    funds, a new classroom and start to a second floor is under construction for IDEC
+                                    the closest thing to a public high school anywhere near Ipala (Instituto de
+                                    Educación Diversificada por Cooperativa de Enseñanza. The goal is to have it
+                                    completed and ready to occupy when school resumes in mid January–it’s going to be
+                                    close! The construction crew says they are committed to making it happen, and a
+                                    number of community volunteers are helping speed up the process so let's assume
+                                    it’ll come in on time 😉.
                                 </p>
-                                <p>According to the UNICEF data, four out of 10 children under the
-                                    age of 5 suffer from poor nutrition. This issue is even worse for
-                                    the indigenous population since eight out of 10 children, or
-                                    double more than the average, suffer from the same problem.
-                                    Health-wise problems at an early age can affect growth, both
-                                    cognitively and physically. From 2010 to 2015, mortality in
-                                    children under 5 was 35 deaths a year per 1,000 live births.</p>
-                                <p>There are currently over 500,000 orphans in Guatemala and one
-                                    child is abandoned every 4 days. Vulnerable families are
-                                    especially in need of our support. Lacking support, safe work, or
-                                    daycare services, many families in Guatemala struggle to provide
-                                    adequate care for their children. </p>
-                                <h4 class="mt-0">How does our Organization support with health needs?</h4>
-                                <p>An important part of our health work is centered around improving
-                                    aspects of community health. Poor health may be a factor limiting
-                                    the abilities of families to access education, earn income and
-                                    participate in their communities. Our Community Health Program is
-                                    built on two elements: Nutrition and Shelter. The two most basic
-                                    needs. </p>
-                                <p>We provide food during the Covid-19 pandemic.</p>
-                                <p>We provide families with housing and efficient smokeless cookstoves
-                                    in an effort to reduce the prevalence of preventable disease. </p>
-                                <p>We provide support to a Seniors Center that provides health and
-                                    nutritional support to the elderly, at the same time connecting
-                                    them with younger members of the community. </p>
-                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
-                                <div class="col">
-                                    <div id="healthCarousel" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#healthCarousel" data-slide-to="0" class="active"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="1"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="2"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="3"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="4"></li>
-                                        </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="/images/health-house-no-stove.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Home without Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-no-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stoveless - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-chimney-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Chimney - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Chimney for the smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-delivery-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Delivery - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Delivering the new smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Moving the new smokeless stove base
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a class="carousel-control-prev" href="#healthCarousel" role="button"
-                                            data-slide="prev">
-                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Previous</span>
-                                        </a>
-                                        <a class="carousel-control-next" href="#healthCarousel" role="button"
-                                            data-slide="next">
-                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Next</span>
-                                        </a>
-                                    </div>
-                                </div>
+                                <p>AEHCA is committed to stay with IDEC’s expansion at least through a second new
+                                    classroom that will get built in 2024 or 2025, depending on how quick IDEC and AEHCA
+                                    can raise the funds needed.</p>
+                                <img src="/images/school_1.jpeg" width="80%" height="auto"
+                                    class="pb-2 rounded mx-auto d-block" alt="school improvement supplies">
+                                <p>The new classroom will be directly over this part of the school. The first stage is
+                                    creating
+                                    concrete columns to support the second floor. Materials like steel reinforcement and
+                                    sand are stockpiled in preparation for constructing that part of the building.
+                                </p>
+                                <p>
+                                    <video class="mx-auto d-block" width="50%" height="auto" controls>
+                                        <source src="/videos/school_project.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </p>
                             </div>
                         </div>
                         <hr class="my-4">
@@ -139,4 +70,7 @@ author: Vernon
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
